[package]
name = "nyte"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
wgpu = "23.0.1"
env_logger = "0.11.5"
nalgebra = "0.33.2"
pollster = "0.4.0"
log = "0.4.22"
bytemuck = { version = "1.20.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"]}

[lib]
doctest = false